	Fixed the bouncer tests.
	Applied the bouncer fixes to the plug version of the bouncer.
	Fixed ical and tokentest bouncers use of addKeycard. 

2008-10-21  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/bouncers/bouncer.py:
	Made addKeycard accept already added keycards.

2008-10-20  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/bouncers/bouncer.py:
        Fixed the do_close method to return a deferred called when
        all keycard has been revoked.
        Made addKeycard return if the keycard has been added.
        Added two virtual methods where subclasses can safely
        update and cleanup data related to keycards.
        Fixes #1153

2008-10-27  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/bouncers/plug.py:
	Added a comment to remember the new expireKeycardIds
	API has not been duplicated to the plug version
	of the bouncer.

2008-10-22  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/bouncers/bouncer.py:
	Accept calls to expireKeycardIds that return None,
	because the current tests do not support return values.

2008-10-16  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/base/http.py:
	* flumotion/component/bouncers/bouncer.py:
	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	* flumotion/component/misc/httpserver/httpserver.py:
	* flumotion/manager/component.py:
	Added expireKeycardIds method to the base Bouncer class,
	the methods for the manager to forward the calls,
	and fixed the consumers to use the new method.

2008-10-16  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/manager/component.py:
	Added to the component avatar the method to forward
	keep-alive calls to the bouncers.
	Fixes #895

2008-10-15  Jan Urbanski  <jurbanski@flumotion.com>

	* common/Makefile.am:
	Add flumotion-trial to EXTRA_DIST in common/Makefile.am.

2008-10-15  Pedro Gracia  <pedro@flumotion.com>

	* flumotion/monitor/nagios/stream.py: